Added filters for dragging documents